libview: Use EvPixbufCache to find selection region

Using view->selection_info.selections is inaccurate if the zoom
changes, causing drag and drop of selected text to fail.  This changes
location_in_selected_text function to use the more accurate
ev_pixbuf_cache_get_selection_region to find the selection region.

https://bugzilla.gnome.org/show_bug.cgi?id=702406